--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -1,4 +1,6 @@
-<p>To upgrade your Appwrite server from an older version, you should use the Appwrite migration tool <b>after you have installed the new version</b>. The migration tools will adjust your Appwrite data to the new version structure to make sure your Appwirte data is compatible with any internal changes. Make sure to run th migration tool <b>after</b> you already finished <a href="/docs/installation">installing</a> the new version.</p>
+<p>To upgrade your Appwrite server from an older version, you should use the Appwrite migration tool <b>after you have installed the new version</b>. The migration tool will adjust your Appwrite data to the new version structure to make sure your Appwirte data is compatible with any internal changes.</p>
+
+<p>Make sure to run the migration tool <b>after</b> you already finished <a href="/docs/installation">installing</a> the new version. When you install the new version, you need to run the installation command from the parent directory of your `appwrite` directory where your docker-compose.yml is located or to manually update your docker-compose.yml file. Your `appwrite` directory will be located at the location of the woking dir you used while setting Appwrite in the first place.</p>
 
 <div class="notice margin-bottom">
     <h3>A Note About Migration</h3>
