--- a/app/views/docs/production.phtml
+++ b/app/views/docs/production.phtml
@@ -40,6 +40,6 @@
 
 <h2>Error Reporting</h2>
 
-<p>By default, Appwrite installation comes with error debugging is turned off, You can turn it off in dev mode to try and debug issues, or report problems while still in development mode.</p>
+<p>By default, Appwrite installation comes with error debugging is turned off, You can turn it on in dev mode to try and debug issues, or report problems while still in development mode.</p>
 
 <p>In production, it is highly recommended to turn error reporting off. To do so, make sure the Appwrite container environment variable <b>_APP_ENV</b> value from is set to <b>production</b> and not <b>development</b>.</p>
