--- a/app/views/docs/permissions.phtml
+++ b/app/views/docs/permissions.phtml
@@ -20,6 +20,13 @@
 
 <p>When not providing a resource with read or write permissions, the default value will be empty. When a read or write permissions is missing, no one will be granted access control to the resource.</p>
 
+<div class="notice calm margin-top-large margin-bottom-large">
+    <h4>Note</h4>
+    
+    <p>You will need an active session to handle database transactions for your collections</p>
+    <p>If you have rules where you allow for wild cards or role:guest in a collection, you can create an Anonymous Session before you make the API call.</p>
+</div>
+
 <h2 id="server-integration">Server Integration</h2>
 
 <p>A server or <a href="/docs/admin" target="_blank">admin integration</a> can be used for increased flexibility. When using a server integration in combination with the proper <a href="/docs/keys#scopes" target="_blank">API scopes</a>, you can have both read and write access to any of your project resources regardless of their permissions.</p>
