feat: fix upgrade docs

--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -1,7 +1,5 @@
 <p>To upgrade your Appwrite server from an older version, you should use the Appwrite migration tool <b>after you have installed the new version</b>. The migration tool will adjust your Appwrite data to the new version structure to make sure your Appwrite data is compatible with any internal changes.</p>
 
-<p>Make sure to run the migration tool <b>after</b> you have finished <a href="/docs/installation">installing</a> the new version. When you install the new version, you need to run the installation command from the parent directory of your `appwrite` directory where your docker-compose.yml is located or to manually update your docker-compose.yml file. Your `appwrite` directory will be located at the location of the working dir you used while setting Appwrite in the first place.</p>
-
 <div class="notice margin-bottom">
     <h3>A Note About Migration</h3>
 
@@ -33,7 +31,7 @@
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>docker ps | grep appwrite/appwrite</code></pre>
 </div>
-<p>Verify that the <b>STATUS</b> doesn't have any errors and all the <b>appwrite/appwrite</b> containers have version <?php echo APP_VERSION_STABLE; ?></p>
+<p>Verify that the <b>STATUS</b> doesn't have any errors and all the <b>appwrite/appwrite</b> containers have version : <?php echo APP_VERSION_STABLE; ?></p>
 
 <p>We can now start the migration. Navigate to the <b>appwrite</b> directory where your <b>docker-compose.yml</b> is present and run the following command</p>
 
