--- a/app/views/docs/installation.phtml
+++ b/app/views/docs/installation.phtml
@@ -1,3 +1,8 @@
+<div class="notice margin-bottom">
+    <h3>Migration Instructions</h3>
+    <p>If you are migrating from an older version of Appwrite, you need to follow the migration instructions <a href="/docs/upgrade" target="blank" rel="noopener">here.</a></p>
+</div>
+
 <p>Appwrite is a self-hosted backend server packaged as a set of Docker containers. You can install and run Appwrite on any operating system that can run a <a href="https://www.docker.com/products/docker-desktop" target="_blank" rel="noopener">Docker CLI</a>. You can use Appwrite on your local desktop or cloud provider of your choice.</p>
 
 <h2>System Requirements</h2>
