--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -31,10 +31,8 @@
 <p>We can now start the migration. Navigate to the <b>appwrite</b> directory where your <b>docker-compose.yml</b> is present and run the following command</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>
-    cd appwrite/
-    docker-compose exec appwrite migrate
-    </code></pre>
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>cd appwrite/
+    docker-compose exec appwrite migrate</code></pre>
 </div>
 
 <p>Once the migration process has completed successfully, you're all set to use the latest version of Appwrite!</p>
