Slightly modify casings and descriptions

--- a/app/views/docs/getting-started-for-web.phtml
+++ b/app/views/docs/getting-started-for-web.phtml
@@ -23,7 +23,7 @@ $demos = $platform['demos'] ?? [];
 
 <p>Go to your new Appwrite console and once inside click the <i class="icon-plus"></i> icon in the top navigation header or on the <b>'Create Project'</b> button on your console homepage. Choose a name for your project and click create to get started.</p>
 
-<h2>Add your Web Platform</h2>
+<h2>Add Your Web Platform</h2>
 
 <p>For you to init your SDK and interact with Appwrite services you need to add a web platform to your project. To add a new platform, go to your Appwrite console, choose the project you created in the step before and click the 'Add Platform' button.</p>
 
@@ -35,7 +35,7 @@ $demos = $platform['demos'] ?? [];
 
 <h3>NPM</h3>
 
-<p>Use <a href="https://npmjs.com" target="_blank">Javascript package manager, NPM</a> from your command line to add Appwrite SDK to your project.</p>
+<p>Use <a href="https://npmjs.com" target="_blank">NPM (node package manager)</a> from your command line to add Appwrite SDK to your project.</p>
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>npm install appwrite</code></pre>
