--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -93,25 +93,54 @@ $runtimes = $this->getParam('runtimes', []);
     <p><b>Python</b></p>
 
     <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-        <pre class="line-numbers"><code class="prism language-bash" data-prism>PIP_TARGET=./.appwrite pip install -r ./requirements.txt --upgrade --ignore-installed</code></pre>
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>PIP_TARGET=./.appwrite </code>
+            <code class="prism language-bash" data-prism>pip install -r ./requirements.txt --upgrade --ignore-installed</code>
+        </pre>
+    </div>
+    <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>$env:PIP_TARGET=./.appwrite </code>
+            <code class="prism language-bash" data-prism>pip install -r ./requirements.txt --upgrade --ignore-installed</code>
+        </pre>
     </div>
 
     <p><b>Dart</b></p>
 
     <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-        <pre class="line-numbers"><code class="prism language-bash" data-prism>PUB_CACHE=./.appwrite pub get</code></pre>
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>PUB_CACHE=./.appwrite</code>
+            <code class="prism language-bash" data-prism>pub get</code>
+        </pre>
+    </div>
+    <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>$env:PUB_CACHE=./.appwrite</code>
+            <code class="prism language-bash" data-prism>pub get</code>
+        </pre>
     </div>
 
     <p><b>Deno</b></p>
 
     <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-        <pre class="line-numbers"><code class="prism language-bash" data-prism>DENO_DIR=./.appwrite deno cache main.ts</code></pre>
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>DENO_DIR=./.appwrite</code>
+            <code class="prism language-bash" data-prism>deno cache main.ts</code>
+        </pre>
+    </div>
+    <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>$env:DENO_DIR=./.appwrite</code>
+            <code class="prism language-bash" data-prism>deno cache main.ts</code>
+        </pre>
     </div>
 
     <p><b>Ruby</b></p>
 
     <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-        <pre class="line-numbers"><code class="prism language-bash" data-prism>docker run --rm -v $(pwd):/app -w /app --env GEM_HOME=./.appwrite appwrite/env-ruby-2.7:1.0.2 bundle install</code></pre>
+        <pre class="line-numbers">
+            <code class="prism language-bash" data-prism>docker run --rm -v $(pwd):/app -w /app --env GEM_HOME=./.appwrite appwrite/env-ruby-2.7:1.0.2 bundle install</code>
+        </pre>
     </div>
 </div>
 
