--- a/app/views/docs/getting-started-for-android.phtml
+++ b/app/views/docs/getting-started-for-android.phtml
@@ -49,7 +49,7 @@ $version = (isset($versions['android'])) ? $versions['android'] : '';
 
 <div class="ide" data-lang="groovy" data-lang-label="Groovy">
   <pre class="line-numbers">
-  <code class="prism language-groovy" data-prism><?php echo $this->escape('implementation("appwrite-kotlin-android:0.1.0")');?>
+  <code class="prism language-groovy" data-prism>'implementation("appwrite-kotlin-android:<?php echo $this->escape($version); ?>")'
   </code>
   </pre>
 </div>
