--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -37,7 +37,7 @@ $markdown->setSafeMode(true);
 $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
 ?>
 
-<div data-ls-attrs="class=language-<?php echo $this->escape($sdk); ?> platform-<?php echo $this->escape($family); ?> examples-in-<?php echo $this->escape($sdk); ?> references">
+<div data-ls-attrs="class=language-<?php echo $this->escape($sdk); ?> platform-<?php echo $this->escape($family); ?> examples-in-<?php echo $this->escape($sdk); ?>">
     <?php
     foreach ($spec['paths'] as $url => $path) {
         foreach ($path as $method => $operation) {
@@ -277,7 +277,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
             <div class="row responsive">
                 <div class="col span-7">
                     <h2 class="margin-bottom">
-                        <a href="/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>#<?php echo $operation['operationId']; ?>" id="<?php echo $operation['operationId']; ?>"><?php echo $this->escape($title); ?></a>
+                        <a href="/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>#<?php echo $operation['operationId']; ?>" id="<?php echo $operation['operationId']; ?>" class="references"><?php echo $this->escape($title); ?></a>
                     </h2>
 
                     <div>
