Fixed syntax highlight

--- a/app/views/docs/getting-started-for-server.phtml
+++ b/app/views/docs/getting-started-for-server.phtml
@@ -42,8 +42,8 @@
     <li>
         <h3>Dart</h3>
         <div>
-            <div class="ide margin-top-small" data-lang="bash" data-lang-label="Dart SDK">
-                <pre class="line-numbers"><code class="prism language-bash" data-prism>dart pub add dart_appwrite</code></pre>
+            <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart SDK">
+                <pre class="line-numbers"><code class="prism language-dart" data-prism>dart pub add dart_appwrite</code></pre>
             </div>
         </div>
     </li>
@@ -134,7 +134,7 @@ client
     </li>
     <li>
         <h3>Dart</h3>
-        <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Dart SDK">
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart SDK">
             <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:dart_appwrite/dart_appwrite.dart';
 
 Client client = Client();
@@ -259,7 +259,7 @@ client
     </li>
     <li>
         <h3>Dart</h3>
-        <div class="ide margin-top-small" data-lang="typescript" data-lang-label="Dart SDK">
+        <div class="ide margin-top-small" data-lang="dart" data-lang-label="Dart SDK">
             <pre class="line-numbers"><code class="prism language-dart" data-prism>import 'package:dart_appwrite/dart_appwrite.dart';
 
 Client client = Client();
