fixed path for powershell env

--- a/app/views/docs/functions.phtml
+++ b/app/views/docs/functions.phtml
@@ -100,7 +100,7 @@ $runtimes = $this->getParam('runtimes', []);
     </div>
     <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
         <pre class="line-numbers">
-            <code class="prism language-bash" data-prism>$env:PIP_TARGET=./.appwrite </code>
+            <code class="prism language-bash" data-prism>$env:PIP_TARGET=.appwrite </code>
             <code class="prism language-bash" data-prism>pip install -r ./requirements.txt --upgrade --ignore-installed</code>
         </pre>
     </div>
@@ -115,7 +115,7 @@ $runtimes = $this->getParam('runtimes', []);
     </div>
     <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
         <pre class="line-numbers">
-            <code class="prism language-bash" data-prism>$env:PUB_CACHE=./.appwrite</code>
+            <code class="prism language-bash" data-prism>$env:PUB_CACHE=.appwrite</code>
             <code class="prism language-bash" data-prism>pub get</code>
         </pre>
     </div>
@@ -130,7 +130,7 @@ $runtimes = $this->getParam('runtimes', []);
     </div>
     <div class="ide margin-bottom" data-lang="powershell" data-lang-label="PowerShell">
         <pre class="line-numbers">
-            <code class="prism language-bash" data-prism>$env:DENO_DIR=./.appwrite</code>
+            <code class="prism language-bash" data-prism>$env:DENO_DIR=.appwrite</code>
             <code class="prism language-bash" data-prism>deno cache main.ts</code>
         </pre>
     </div>
