Updated naming conventions

--- a/app/views/docs/architecture.phtml
+++ b/app/views/docs/architecture.phtml
@@ -55,7 +55,7 @@ $image = new View(__DIR__.'/../general/image.phtml');
 
 <p><b>Functions</b></p>
 
-<p>The Functions worker is responsible for executing your Appwrite cloud functions in an isolated environment. The service leverages Docker for creating running environment in multiple supported coding languages.</p>
+<p>The Functions worker is responsible for executing your Appwrite cloud functions in an isolated runtime environment. The service leverages Docker for creating running environment in multiple supported coding languages.</p>
 
 <p><b>Audits</b></p>
 
