--- a/app/views/docs/upgrade.phtml
+++ b/app/views/docs/upgrade.phtml
@@ -14,8 +14,7 @@
 
 <p> The first step is to install the latest version of Appwrite. Head to the directory where you first installed Appwrite. This is where you will find the <b>appwrite</b> directory and the <b>appwrite/docker-compose.yml</b> file. Make sure you are at the same level as the <b>appwrite</b> directory and then execute the following command</p>
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
-    <pre class="line-numbers"><code class="prism language-bash" data-prism>
-    docker run -it --rm \
+    <pre class="line-numbers"><code class="prism language-bash" data-prism>docker run -it --rm \
     --volume /var/run/docker.sock:/var/run/docker.sock \
     --volume "$(pwd)"/appwrite:/usr/src/code/appwrite:rw \
     --entrypoint="install" \
@@ -33,7 +32,7 @@
 
 <div class="ide margin-bottom" data-lang="bash" data-lang-label="Bash">
     <pre class="line-numbers"><code class="prism language-bash" data-prism>cd appwrite/
-    docker-compose exec appwrite migrate</code></pre>
+docker-compose exec appwrite migrate</code></pre>
 </div>
 
 <p>Once the migration process has completed successfully, you're all set to use the latest version of Appwrite!</p>
