feat: review comments

--- a/app/views/docs/email-delivery.phtml
+++ b/app/views/docs/email-delivery.phtml
@@ -68,4 +68,4 @@ If this is the case, you can try rebuilding your appwrite stack using:
 </p>
 
 
-<p>Now you can head over to your Appwrite console, logout from your account and try to recover your password  or send invites to other team members from the your Appwrite console using your newly configured SMTP provider.</p>
+<p>Now you can head over to your Appwrite console, logout from your account and try to recover your password or send invites to other team members from your Appwrite console using your newly configured SMTP provider.</p>
